src/objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>Available_Date__c</fullName>
        <label>Available Date</label>
        <summarizedField>Asset_Issue__c.Expected_Return_Date__c</summarizedField>
        <summaryForeignKey>Asset_Issue__c.Asset__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantity_Available__c</fullName>
        <formula>Total_Quantity__c - Quantity_Damaged__c  -  Quantity_Lost__c  -  Quantity_Sold__c  -  Quantity_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Damaged__c</fullName>
        <label>Quantity Damaged</label>
        <summarizedField>Material_Out__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Material_Out__c.Type__c</field>
            <operation>equals</operation>
            <value>Damaged/Retired</value>
        </summaryFilterItems>
        <summaryForeignKey>Material_Out__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantity_Lost__c</fullName>
        <label>Quantity Lost</label>
        <summarizedField>Material_Out__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Material_Out__c.Type__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Material_Out__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantity_Sold__c</fullName>
        <label>Quantity Sold</label>
        <summarizedField>Material_Out__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Material_Out__c.Type__c</field>
            <operation>equals</operation>
            <value>Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>Material_Out__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <summarizedField>Asset_Issue__c.Quantity_Issued_Updated__c</summarizedField>
        <summaryForeignKey>Asset_Issue__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>Material_In__c.Quantity__c</summarizedField>
        <summaryForeignKey>Material_In__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Assets Owned</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets Owned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>